<resources>
    <string name="app_name">Bubble Browser</string>
    <string name="toast_granted">Granted.</string>
    <string name="toast_turn_on_notification">Turn on my notification.</string>
    <string name="toast_allow_bubble">Select \"All conversation can bubble.\"</string>
    <string name="menu_open_bookmark">Open Bookmarks</string>
    <string name="menu_close">Close</string>
    <string name="notification_channel_bubble">Notifications for Bubbles.</string>
    <string name="toast_from_share_intent_invalid_url">Invalid URL. Received URL :</string>
    <string name="menu_back">Back</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_open_with_browser">Open with browser</string>
    <string name="menu_add_bookmarks">Add to Bookmarks</string>
    <string name="menu_reload">Reload</string>
    <string name="text_go_with_url">Enter URL</string>
    <string name="text_go_with_bookmarks">Select Bookmarks</string>
    <string name="button_go_url">Go</string>
    <string name="text_bookmarks">Bookmarks</string>
    <string name="init_allow_notification">Grant Notifications</string>
    <string name="init_show_bubble">Turn on Bubbles</string>
    <string name="init_start">Start</string>
    <string name="button_manage">Manage</string>
    <string name="button_grant">Grant</string>
    <string name="init_detail">Bubble Browser uses the Bubble Notification in the Android notification system. Please allow the following permissions to use this app.</string>
    <string name="init_head">Introduction</string>
    <string name="geolocation_permission_denied">Denied Geolocation Access.</string>
    <string name="ask_geolocation">The website %1$s wants to your device\'s location.</string>
    <string name="button_allow">Allow</string>
    <string name="button_block">Block</string>
    <string name="geolocation_title">Geolocation Access Request</string>
    <string name="add_bookmark_title_hint">Bookmark title</string>
    <string name="add_bookmark_popup_save">Save</string>
    <string name="add_bookmark_toast_saved">The bookmark saved.</string>
    <string name="toast_empty_url">The url cannot be null. Enter url or select pages from bookmarks</string>
    <string name="dialog_edit_title">Edit Bookmark</string>
    <string name="dialog_edit_name">Bookmark Title</string>
    <string name="dialog_edit_url">Bookmark URL</string>
    <string name="dialog_edit_save">Save</string>
    <string name="dialog_edit_cancel">Cancel</string>
    <string name="dialog_edit_delete_bookmark">Delete</string>
    <string name="toast_edit_save">The Bookmark saved.</string>
    <string name="toast_edit_delete">The bookmark deleted.</string>
    <string name="dialog_confirm_delete_message">Are you sure you want to delete \"%1$s\" ?</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="settings_category_customize">Personalization</string>
    <string name="settings_title_reset">Reset</string>

    <!-- Messages Preferences -->
    <string name="settings_title_url">Default URL</string>

    <!-- Sync Preferences -->
    <string name="settings_title_reset_notification_channel">Reset Notification Settings</string>
    <string name="settings_title_clear_bookmarks">Clear All Bookmarks</string>
    <string name="settings_summary_reset_notification">Reset notification settings It will change the default settings with ringtones, vibrations etc.</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_summary_clear_bookmarks">Clear all saved bookmarks.</string>
    <string name="toast_settings_reset_notifications">A notification channel was reset.</string>
    <string name="toast_delete_bookmarks_notifications">All bookmarks were removed.</string>
    <string name="dialog_delete_bookmarks_message">Are you sure to want to delete All Bookmarks?</string>
    <string name="settings_summary_default_url">The default page of Main Activity and Quick Panel Settings. If the value is not set, it will launch Google.</string>
    <string name="settings_summary_add_quick_setting">Add Quick Setting Tile to your panel.</string>
    <string name="settings_title_add_quick_setting">Add to Quick Setting Panel</string>
    <string name="toast_version_to_add_tile">Only Android 13+ devices can use. \nAdd Tile By Yourself</string>
    <string name="toast_tile_added_or_fail">Requested. If pop up does not appear,  the Tile may already added to quick setting panel.</string>
    <string name="settings_title_version">Version</string>
    <string name="settings_category_about_app">About this App</string>
    <string name="settings_category_default_browser">Default Browser</string>
    <string name="settings_summary_enable_as_default_browser">Tap here to change this app to  the default browser app.</string>
    <string name="settings_title_enable_as_default_browser">Set As Default Browser</string>
    <string name="settings_title_select_default_opener">Browser for \"Open with\"</string>
    <string name="settings_item_entries_default" >Default</string>
    <string name="notification_channel_update">Notify Update Features.</string>
    <string name="app_update_title">New Features on Bubble Browser</string>
    <string name="app_update_text">Now, you can select this app as a default browser!</string>
    <string name="settings_summary_help">Go to the help site.</string>
    <string name="settings_title_help">Help</string>
    <string name="settings_dialog_default_browser_title">Important Note</string>
    <string name="settings_dialog_default_browser_message">This app is NOT fully supported browser features. \nPlease use with other browse when something went wrong. \n\nAfter choose default browser, You can choose app for additional browser to \"Open with\" in below entry.</string>
    <string name="button_ok">OK</string>

</resources>