<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_customize">

        <EditTextPreference
            app:key="defaultUri"
            app:title="@string/settings_title_url"
            app:defaultValue="https://google.com"
            app:dialogMessage="@string/settings_summary_default_url"
            app:dialogTitle="@string/settings_title_url"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="register_quick_setting"
            app:title="@string/settings_title_add_quick_setting"
            app:summary="@string/settings_summary_add_quick_setting" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_title_reset">

        <Preference
            app:key="reset_notification"
            app:title="@string/settings_title_reset_notification_channel"
            app:summary="@string/settings_summary_reset_notification"
            />

        <Preference
            app:key="clear_bookmarks"
            app:summary="@string/settings_summary_clear_bookmarks"
            app:title="@string/settings_title_clear_bookmarks" />


    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_default_browser">
        <Preference
            app:key="enable_as_default_browser"
            app:summary="@string/settings_summary_enable_as_default_browser"
            app:title="@string/settings_title_enable_as_default_browser"/>
        <ListPreference
            app:key="select_default_opener"
            app:title="@string/settings_title_select_default_opener"
            app:summary="@string/settings_summary_enable_as_default_browser"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/settings_open_in_entries"
            app:entryValues="@array/settings_open_in_values"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_about_app">
        <Preference
            app:key="help"
            app:summary="@string/settings_summary_help"
            app:title="@string/settings_title_help" />
        <Preference
            app:key="version"
            app:summary="@string/settings_summary_clear_bookmarks"
            app:title="@string/settings_title_version" />

    </PreferenceCategory>


</PreferenceScreen>