<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_back"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/menu_back"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_forward"
        android:icon="@drawable/ic_baseline_arrow_forward_24"
        android:title="@string/menu_forward"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_item_open_with"
        android:icon="@drawable/ic_baseline_open_in_new_24"
        android:title="@string/menu_open_with_browser"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_add_bookmark"
        android:icon="@drawable/ic_baseline_bookmark_add_24"
        android:iconTint="?attr/colorPrimary"
        android:title="@string/menu_add_bookmarks"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_item_reload"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:iconTint="?attr/colorPrimary"
        android:title="@string/menu_reload"
        app:showAsAction="withText" />


</menu>